adjust role to add OS installation

--- a/roles/vmcreation/templates/vm_template.xml.j2
+++ b/roles/vmcreation/templates/vm_template.xml.j2
@@ -50,6 +50,13 @@
       <target dev='hda' bus='ide'/>
     </disk>
 
+    <disk type='file' device='cdrom'>
+      <driver name='qemu' type='raw'/>
+      <source file='/var/lib/libvirt/images/{{ vm_name }}/seed.iso'/>
+      <target dev='hdb' bus='ide'/>
+      <readonly/>
+    </disk>
+
     <!-- Network Interface -->
     <interface type='network'>
       <source network='{{ vm_network }}'/>
