add setting static IP address

--- a/roles/vmcreation/templates/user-data.j2
+++ b/roles/vmcreation/templates/user-data.j2
@@ -1,6 +1,6 @@
 #cloud-config
-hostname: {{ vm_name }}.smartek.ae
-manage_etc_hosts: true
+hostname: "{{ vm_name }}.smartek.ae"
+#manage_etc_hosts: true
 
 users:
   - name: {{ vm_user | default('ansible') }}
